<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"

    tools:context=".Summary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/summ_title"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginBottom="50dp"
        android:text="@string/summ_descrip"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="10dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvIncome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#8BC34A"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/income"/>

        <TextView
            android:id="@+id/tvExpense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#DC2315"
            android:gravity="center_horizontal"
            android:text="@string/expense"/>

    </LinearLayout>

    <ImageView
        android:src="@drawable/bracket"
        android:id="@+id/bracket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
    </ImageView>

    <TextView
        android:id="@+id/tvBal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#8BC34A"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:text="@string/balance"/>

</LinearLayout>